<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/blue_gradient_background">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dementia Symptom (1/3)"
            android:paddingHorizontal="25dp"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <androidx.cardview.widget.CardView

        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_textview"
        android:layout_margin="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp" >

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/lighter_black"/>

            <TextView
                android:id="@+id/description_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sd1"
                android:visibility="gone"
                android:textAlignment="textStart"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginBottom="30dp"
        app:contentPadding="20dp" >

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/title_textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/lighter_black"/>

            <TextView
                android:id="@+id/description_textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sd2"
                android:visibility="gone"
                android:textAlignment="textStart"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginBottom="30dp"
        app:contentPadding="20dp" >

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/title_textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/lighter_black"/>

            <TextView
                android:id="@+id/description_textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sd3"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:textAlignment="textStart"
                android:justificationMode="inter_word"
                android:visibility="gone"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>